<resources>
    <string name="app_name">EasyTrade</string>
    
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="error_invalid_password">This password is too short</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="textview_historic">History of exchanges</string>
    <string name="name_lbl">Name</string>
    <string name="phone_lbl">Phone</string>
    <string name="email_lbl">Email</string>
    <string name="login_lbl">Login</string>
    <string name="password_lbl">Password</string>
    <string name="image_lbl">Image</string>
    <string name="create_lbl">Create Account</string>

</resources>
